# vita_ai_assist_transcript

./: .gitignore  README.md  docker-compose.yml  test_webhook_simulation.py
backend/: Dockerfile  OGG_IMPLEMENTATION_SUMMARY.md  OGG_SUPPORT.md  OGG_TEST_RESULTS.md  alembic.ini  database.py  init_db.py  main.py  models.py  pyproject.toml  seed_tenant.py  test_ogg_upload.py  verify_services.py
backend/agent/: graph.py  prompts.py  schemas.py  test_graph.py  tools.py
backend/alembic/: env.py
backend/alembic/versions/: 032ce6441d7b_add_aliases_to_patients.py  7b0dac60f19a_add_multi_tenant_and_refactor.py  c00a983216d4_add_cpf_and_unified_model.py  ea2e8dfba064_add_finance_module_tables.py  ec31c3c7ed24_initial_tables.py
backend/api/: endpoints.py  integrations.py  webhook.py
backend/core/: ai_gateway.py  audit.py  config.py  context.py
backend/models/: __init__.py  clinical.py  finance.py  tenant.py
backend/modules/finance/: router.py
backend/modules/finance/api/endpoints/: reconciliation.py  tax.py  tax_analysis.py
backend/modules/finance/core/: config.py  llm_factory.py
backend/modules/finance/core/tax_engine/: ingest.py
backend/modules/finance/db/: models.py  session.py
backend/modules/finance/knowledge/vector_store/: index.pkl
backend/modules/finance/schemas/: document.py  match.py  receipt.py  tax.py
backend/modules/finance/services/: extractor.py  processor.py  reconciler.py  reconciliation.py  tax_agent.py
backend/modules/finance/services/parsers/: base.py  danfe.py  factory.py  generic.py  itau.py  xp.py
backend/modules/knowledge/tax_rules/: leao.txt
backend/schemas/: ai.py
backend/scripts/: migrate_data_v1.py
backend/services/: llm.py  transcription.py  waha.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: upload.ts
frontend/src/components/: FileDropzone.tsx  Layout.tsx  PatientHeader.tsx  PatientTimeline.tsx  RecordForm.tsx  Sidebar.tsx  TranscriptionResult.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/features/finance/api/: financeApi.ts
frontend/src/features/finance/components/: DocumentUpload.tsx
frontend/src/features/finance/pages/: FinanceDashboard.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/: DashboardHome.tsx  HistoryScreen.tsx  PatientEditScreen.tsx  PatientHistoryScreen.tsx  PatientListScreen.tsx  PatientRecordScreen.tsx  PatientsListScreen.tsx  RecordReviewScreen.tsx  UploadScreen.tsx
frontend/src/utils/: recordUtils.ts
