[tool.poetry]
name = "vita-ai"
version = "0.1.0"
description = "Plataforma SaaS Integrada de Gestão Clínica e Financeira"
authors = ["Vita.AI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
# Drivers de banco de dados
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
python-multipart = "^0.0.17"

# --- AI Stack (Geração 0.3.x - Atualizada) ---
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"
google-generativeai = "^0.8.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"